# Final0108

./: .gitignore  README.md  final0108.csv  final0108.py  final0108_design.md  net.txt  pyproject.toml  report_AAPL_2018-01-01_2025-12-29.html  report_AAPL_2018-01-01_2026-01-01.html  requirements.txt
Final0108/: README.md  final0108_design.md
Final0108/scripts/: render_index.py
Final0108/static/: style.css
