[project]
name = "final0108"
version = "0.1.0"
description = "策略回測網站 — 長短期均線 + RSI + 成交量"
readme = "README.md"
requires-python = "3.11.5"
license = { text = "MIT" }
authors = [ { name = "Your Name", email = "you@example.com" } ]

# Runtime dependencies (from requirements.txt)
dependencies = [
  "yfinance>=0.2",
  "pandas>=1.5",
  "numpy>=1.23",
  "matplotlib>=3.6",
  "fastapi>=0.95",
  "uvicorn[standard]>=0.20",
  "jinja2>=3.1",
  "httpx>=0.23",
]

[project.scripts]
final0108 = "final0108:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
